Finished filling in slides.

--- a/talk-IWCI-2021-09-17.tex
+++ b/talk-IWCI-2021-09-17.tex
@@ -351,6 +351,22 @@ with GIS}
   \Large Results on developing WEB-GIS viewer
 \end{frame}
 
+\begin{frame}
+  \frametitle{Resources presented: Active faults of the South of
+    East Siberia}
+  The fault data\footnote{Oksana V. Lunina.  The digital map of the pliocene quaternary crustal faults in the southern east siberia and the adjacent northern Mongolia. Geodynamics \& Tectonophysics. 2016. 7(3):407-434. \doi{10.5800/GT-2016-7-3-0215}
+} have the following properties:
+  \begin{itemize}
+  \item Faults are the objects having linear projection on the surface, and a depth and a slope in the lithosphere
+  \item Faults are accompanied by various valued characteristics having also characteristics, \emph{e.g.}, unit name, measurement precision and related publications
+  \end{itemize}
+  Further viewer development:
+  \begin{itemize}
+  \item Documents on Faults explorations, \emph{e.g.}, papers
+  \item Various geological events along the faults are to be presented
+  \item Images, tables, expedition trails are also used as auxiliary materials
+  \end{itemize}
+\end{frame}
 
 \begin{frame}
   \frametitle{WEB-GIS viewer of active faults of East Siberia}
@@ -361,13 +377,13 @@ with GIS}
 \begin{frame}
   \frametitle{WEB-GIS viewer of active faults of East Siberia}
   \centering
-  \includegraphics[width=\linewidth]{faults-leaflet-sparql.png}
+  \includegraphics[width=\linewidth]{faults-leaflet-doc.png}
 \end{frame}
 
 \begin{frame}
   \frametitle{WEB-GIS viewer of active faults of East Siberia}
   \centering
-  \includegraphics[width=\linewidth]{faults-leaflet-doc.png}
+  \includegraphics[width=\linewidth]{faults-leaflet-sparql.png}
 \end{frame}
 
 \begin{frame}
@@ -496,48 +512,44 @@ Definition Table
 
 
 \begin{frame}
-  \frametitle{Resources to be presented: Active faults of the South of
-    East Siberia}
-  The fault data\footnote{Oksana V. Lunina.  The digital map of the pliocene quaternary crustal faults in the southern east siberia and the adjacent northern Mongolia. Geodynamics \& Tectonophysics. 2016. 7(3):407-434. \doi{10.5800/GT-2016-7-3-0215}
-} have the following properties:
-  \begin{itemize}
-  \item Faults are the objects having linear projection on the surface, and a depth and a slope in the lithosphere
-  \item Various geological events are also subjects of presentation
-  \item Any object accompanied by various valued characteristics having also characteristics, \emph{e.g.}, unit name, measurement precision and related publications
-  \item Images, tables, expedition trails are also used as auxiliary materials.
-  \end{itemize}
-\end{frame}
-
-\begin{frame}
-  \frametitle{The pollutions of Olkhon Island}
-   % Generate a map from the existing data
-  \centering
-   \includegraphics[width=\linewidth]{olkhon-gis.png}
-\end{frame}
-
-\begin{frame}
   \frametitle{Target system architecture}
   \centering
   \includegraphics[width=0.8\linewidth]{architecture.pdf}
 \end{frame}
 
 \begin{frame}
-  \frametitle{Leaflet}
-  \centering
-  \includegraphics[width=0.8\linewidth]{leaflet.png}
+  \frametitle{The pollutions of Olkhon Island}
+   % Generate a map from the existing data
+  \begin{center}
+    \includegraphics[width=\linewidth]{olkhon-gis.png}
+  \end{center}
+  One Q1 paper has been published and another Q1 one is on the final stage.
 \end{frame}
+
+
+% \begin{frame}
+%   \frametitle{Leaflet}
+%   \centering
+%   \includegraphics[width=0.8\linewidth]{leaflet.png}
+% \end{frame}
 
 \begin{frame}
   \frametitle{Conclusion}
   The following results have been obtained as for today:
   \begin{itemize}
-  \item A short review of similar\& basic projects has been carried out
-  \item An experience has been obtained in usage of standardized ontologies and SW techniques
+  \item A short review of similar projects has been carried out
+  \item Knowledge Graph storage is successfully tested
   \item The project is relevant in sense of application of standards in data publishing
-  \item There are technologies allowing to implement such services, they're mostly web-oriented
-  \item Application of the reviewed technologies will extend the research possibilities
+  \item We implemented a WEB-GIS viewer for Faults, and further development directions are proposed
+    \begin{itemize}
+    \item Join digital archive (KONT-2019) to store papers
+    \item GIS for Olkhon island pollutants with modeling
+    \item Research on Fault impact to pollutants
+    \item Fault viewer for external data
+    \end{itemize}
+  \item The main aim is to develop research environment for publishing processing LOD for geological data.
   \end{itemize}
-  The results were obtained within the framework of the State Assignment of the Ministry of Education and Science of the Russian Federation for the project ``Methods and technologies of cloud-based service-oriented platform for collecting, storing and processing large volumes of multi-format interdisciplinary data and knowledge based upon the use of artificial intelligence, model-guided approach and machine learning''. Some results were obtained using the facilities of the Centre of collective usage ``Integrated information network of Irkutsk scientific educational complex''.
+%  The results were obtained within the framework of the State Assignment of the Ministry of Education and Science of the Russian Federation for the project ``Methods and technologies of cloud-based service-oriented platform for collecting, storing and processing large volumes of multi-format interdisciplinary data and knowledge based upon the use of artificial intelligence, model-guided approach and machine learning''. Some results were obtained using the facilities of the Centre of collective usage ``Integrated information network of Irkutsk scientific educational complex''.
 \end{frame}
 
 \begin{frame}
