--- a/cherkashin-et-al-itams-2021.tex
+++ b/cherkashin-et-al-itams-2021.tex
@@ -16,11 +16,13 @@
 %% Minted listings support
 %% Need pygment <http://pygments.org/> <http://pypi.python.org/pypi/Pygments>
 \usepackage{minted}
+\usepackage{multicol}
 %% auto break lines
 \setminted{breaklines=true}
 \usepackage{doi}
 \def\doitext{DOI:}
 % \newcommand{\doi}[1]{DOI:#1}
+\graphicspath{{pics/}}
 
 %%
 %% end of the preamble, start of the body of the document source.
@@ -93,7 +95,9 @@ url=http://www.crust.irk.ru/member_88.html,
 
 \section{Introduction}
 
-Contemporary Web technologies development is aimed at more tight data integration: standardization of data publishing formats, formal data and metadata representation, modeling interpretation contexts.  Geospatially related objects are frequently published as well.
+Contemporary Web technologies development is aimed at more tight data integration: standardization of data publishing formats, formal data and metadata representation, unifying interpretation contexts, referring external entities.  Geospatially related objects are frequently published in the requirements as well.
+
+Geospatial data are of primary interest of people as many human activities are attached to object located on the Earth's surface.  There are lot of on-line services helping users to navigate, figure out the places corresponding the required conditions (shopping centers, parking places, \emph{etc.}), observation of a territories to familiarize themselves.  The objects of interest as any data objects are described with attributes of various kinds, like working hours of firms, their home site URLs, nearby bus stations.  At present, these software trend to allow integration with their data via open formats and publishing principles, \emph{e.g.}, Linked Open Data.
 
 In this investigation the fault data are chosen as subject for representation and publishing.  Geological field investigations and event observations, \emph{e.g.}, earthquakes, accumulate data, which are analyzed, resulting in setting new attributes to a fault or their refinement.  According to the techniques of geological research additional information are associated with attributes clarifying their values.  Such clarification comprises precision characteristics, measurement conditions, reliability assessment, and paper references, where fault data were published.
 
@@ -111,426 +115,236 @@ The aim of this research and development is to represent existing tabular and sp
 
 \section{Data conversion}
 
+The original database structure is shown in Figure~\ref{fig:db-struct}.  This structure contains  field ``\texttt{ID}'' defining fault identifier, the fault name as a geographical entity, various characteristics with corresponding clarifications, seismic activity, name of compiler researcher and date of refinement.  Data is stored in \texttt{DBF} format, the record number relates the database record with spatial object of fault layer.  Field names in \texttt{DBF} file cannot be longer than ten characters, must be in capitalized, number of fields cannot be more than 255.
+\begin{figure}
+  \centering
+  \footnotesize
+    \begin{multicols}{2}
+\begin{verbatim}
+!table
+!version 300
+!charset WindowsCyrillic
+
+Definition Table
+  Type NATIVE Charset "WindowsCyrillic"
+  Fields 72
+    ID Char (15) Index 1 ;
+    Name Char (40) Index 2 ;
+    Location Char (250) Index 3 ;
+    Strike Char (10) Index 4 ;
+    Strike_Q Char (2) ;
+    Dip_azimuth Char (10) Index 5 ;
+    Dip_azimuth_Q Char (2) ;
+    Dip_angle Char (10) Index 6 ;
+    Dip_angle_Q Char (2) ;
+    Length_km Char (10) Index 7 ;
+    Length_Q Char (2) ;
+    Depth_km Char (10) Index 8 ;
+    Depth_Q Char (2) ;
+    Width_damage_zone_km Char (10) Index 9 ;
+    Width_damage_zone_Q Char (2) ;
+    Slip_sense Char (30) Index 10 ;
+    Slip_sense_Q Char (2) ;
+    Slip_sense_Index Decimal (2, 0) ;
+    Total_Cenozoic_lateral_slip_m Char (20) ;
+    Total_Cenozoic_lateral_slip_Q Char (2) ;
+    Total_Cenozoic_vertical_slip_m Char (20) ;
+    Total_Cenozoic_vertical_slip_Q Char (2) ;
+    . . . . . . . . . . . . . . . . . . . .
+    Potential_Ms_max Float ;
+    Potential_Ms_max_Q Char (2) ;
+    Potential_Mw_max Float ;
+    Potential_Mw_max_Q Char (2) ;
+    Elapsed_time_years Char (10) ;
+    Elapsed_time_Q Char (2) ;
+    Associated_CSS Char (25) ;
+    Associated_IGGSS Char (50) ;
+    Seismic_activity_of_fault Char (3) ;
+    Compiler Char (50) ;
+    Date Char (10) ;
+\end{verbatim}
+  \end{multicols}
+  \caption{Part of the structure of the original database}
+  \label{fig:db-struct}
+\end{figure}
+
+  Identifiers of the attributes with common prefixes define one value with a clarification, \emph{e.g.}, ``\texttt{Depth}'' and ``\texttt{Length}'' of a fault ar measured in kilometers, their values are clarified with ``quality'' attribute having suffix ``\texttt{\_Q}'' at the end.
+
+  Table content slice of the fault database is shown in Figure~\ref{fig:db-slice}.  It is sparse filled: many attributes are \texttt{null}s.  The field ``\texttt{Geomorphol\ldots}'' and some others is filled with values of predefined sets.  The consistency are controlled algorithmically with QGIS extension modules.  This flat structure and representation format are intended to be easily accessed and realized with standard relational database tools, but general violations of standard normal forms forces developer to implement additional subroutines controlling a record content (semantics) in addition to the UPDATE DML\footnote{Abbreviation of Data Manipulation Language.} command.
+
+  \begin{figure}
+    \centering
+\includegraphics[width=\linewidth]{faults-leaflet-db-content.png}
+    \caption{A table content slice}
+    \label{fig:db-slice}
+  \end{figure}
+
+Conversion started with defining T-Box\footnote{Abbreviation of Terminological Box, a set of basis domain terms and their relationships.} comprising the class of fault and its subclasses.  Subclasses correspond to various kinds of faults, \emph{e.g.}, normal, reverse, strike-slip, oblique.  As a differentiating property, ``\texttt{Slip\_sense}'' attribute used.  All the fault records when converted and assigned a class formed A-Box\footnote{Denotation of Instance Box, a set of the instances.}, a database of faults.  Non-\texttt{null} attributes of faults were converted into a literal relation, except those, which values were restricted to a finite set.  These attribute values presented as references to a descriptive constant added to T-Box.  These conversions were implemented as Python program loading \texttt{DBF}-files and generation \texttt{OWL2} \texttt{XML} ones.  After the conversion, the obtained \texttt{OWL}s of T-Box and A-Box were visually checked with Protege, saved into Turtle (\texttt{ttl}) format.
+
+The results of conversions were manually loaded into GraphDB and Jena KG servers.  For each part (T- and A-Box) a global namespace (\texttt{aft}, \texttt{af}) were allocated: \url{http://irnok.net/ontologies/ActiveFaultTerms\#} and \href{http://irnok.net/ontologies/ActiveFault\#}{\ldots/ActiveFault\#}.  In the software, for each KG one must set up individual endpoint providing access.  GraphDB user interface were used for check the correctness of class-instance relations with executing SPARQL-queries.  The peculiarity of GraphDB usage is the necessity to ``activate'' each KG endpoint via user interface after loading their KG contents.  After conversion and set up of the endpoint they will be available at port 7200, URL will be formed out of server address and endpoint name.  An example of a converted item is shown here
+
+\begin{multicols}{2}\tiny
+  \begin{verbatim}
+###  http://irnok.net/ontologies/ActiveFaults#RUAF_996
+af:RUAF_996 rdf:type owl:NamedIndividual ,
+      aft:Fault ,         # Classification
+      aft:NormalSlCB ,
+      aft:PlioceneFault ;
+   aft:ID "RUAF_996"^^xsd:string ;
+   aft:Activity_degree aft:Light ;
+   aft:Averaged_slip_rate [ aft:value "0.0"^^xsd:float ;
+       aft:unit aft:Millimeter ] ;
+   aft:Compiler "Lunina O.V."^^xsd:string ;
+   aft:Date "29.05.2011"^^xsd:string ;
+   aft:Dip_azimuth [ aft:value "310"^^xsd:string ;
+       aft:quality aft:LC ] ;
+   aft:Engineering_geological_grade [ aft:value "0"^^xsd:int ] ;
+   aft:Geomorphological_features [
+       aft:value "Topographic ledge: 1 point"^^xsd:string ;
+       aft:grade "1"^^xsd:int ] ;
+   aft:Geophysical_grade [ aft:value "0"^^xsd:int ] ;
+   aft:Gydrogeological_grade [ aft:value "0"^^xsd:int ] ;
+   aft:Last_activation_age [ aft:value aft:Pliocene ;
+       aft:ageindex "4.0"^^xsd:float ] ;
+   aft:Lateral_max_slip_per_event [ aft:value "0.0"^^xsd:float;
+       aft:unit aft:Meter ] ;
+   aft:Length [ aft:value "12.09"^^xsd:string ;
+       aft:quality aft:LC ;
+       aft:unit aft:Kilometer ] ;
+   aft:Location "At the edge of Barguzin depression and \
+       Ikatsky ridge"^^xsd:string ;
+   aft:Meteorological_grade [ aft:value "0"^^xsd:int ] ;
+   aft:Paleoseismological_grade [ aft:value "0"^^xsd:int ] ;
+   aft:Potential_Ms_max [ aft:value "0.0"^^xsd:float ] ;
+   aft:Potential_Mw_max [ aft:value "0.0"^^xsd:float ] ;
+   aft:Reliability_class [ aft:value "1.0"^^xsd:float ] ;
+   aft:Seismic_activity_of_fault [ aft:value "false"^^xsd:boolean ] ;
+   aft:Seismological_grade [ aft:value "0"^^xsd:int ] ;
+   aft:Slip_rate_grade [ aft:value "0"^^xsd:int ] ;
+   aft:Slip_sense [ aft:value aft:Discard ;
+       aft:index "1.0"^^xsd:float ;
+       aft:quality aft:LC ] ;
+   aft:Strike [ aft:value "40"^^xsd:string ;
+       aft:quality aft:LC ] ;
+   aft:Structural_geological_grade [ aft: value "0"^^xsd:int ] ;
+   aft:Total_activity_grade [ aft:value "1.0"^^xsd:float ] ;
+   aft:Total_max_slip_per_event [aft:value "0.0"^^xsd:float ;
+       aft:unit aft:Meter ] ;
+   aft:Vertical_max_slip_per_event [ aft:value "0.0"^^xsd:float ;
+       aft:unit aft:Meter ] ;
+   aft:Width_damage_zone [ aft:value "1.21"^^xsd:string ;
+       aft:quality aft:AC ;
+       aft:unit aft:Kilometer ] .
+\end{verbatim}
+\end{multicols}
+
 \section{Viewer implementation}
 
-\section{Examples of usage}
+Our viewer is a Web-2.0 application composed out of React components.  The application maintains its state with Redux. Properly used Redux allows one to control viewer widgets content and structures solely by defining state change functions.
+
+Rendering maps is based on React wrapper of \texttt{leaflet.js} library.  Library allows one to draw interactive graphics objects (polygons) on a topological basis.  Leaflet supports various sources, such as \href{https://openstreetmap.org/}{openstrrtmpa.org}, whish is default one.  Fault shapes were converted from \texttt{KML} format to leaflet interpretable \texttt{JSON} and are being loaded by application on demand from web server.
+
+By default viewer shows all faults from KG, the result of a SPARQL query requesting all objects of a class \texttt{aft:Fault}\footnote{\url{http://irnok.net/ontologies/ActiveFaultTerms\#Fault}}, \emph{i.e.} all the instances\footnote{All faults are instances of \texttt{aft:Fault}}.  There is a form in the user interface for setting filtering conditions.  They change the default SPARQL query adding restrictions.  For the debugging and developing, one version of the viewer contains a form for free-form SPARQL query definition, which execution results also showed as a fault map.
+
+Viewing fault attributes is implemented as a form document improved with \texttt{RDFa} markup.  This markup originates from results of SPARQL query selecting all the predicate relation for the chosen fault.
+%
+% \subsection{Examples of the usage}
+%
+In Figure~\ref{fig:ex}, viewer window is shown.  As a subject of interest, Irkut-Ushakovsky fault being extended through Irkutsk city is chosen.
+
+\begin{figure}
+  \centering
+  \includegraphics[width=\linewidth]{faults-leaflet-doc.png}
+  \caption{Viewer window showing description of a fault}
+  \label{fig:ex}
+\end{figure}
+
 
 \section{Related Works}
 
+  The project\footnote{Claus Stadler, Jens Lehmann, Konrad Höffner, Sören Auer. LinkedGeoData:
+A core for a web of spatial open data. Semantic Web 3 (2012) 333–354. \doi{10.3233/SW-2011-0052}} was to represent OpenSteetMap (OSM) data as a KG,
+  \begin{itemize}
+  \item Resembles the DBPedia project formalizing Wikipedia data but over the OSM database
+  \item Converts SM data into RDF adhering LOD
+  \item Designed an ontology for object georeferencing (nodes)
+  \item Related the object to DBpedia, GeoNames, icon sets
+  \item Developed a taxonomy of the objects on a various levels (Road~\to~Way (list of nodes)) % and Fig 3 of the LGD paper.
+  \item Stated the relations between nodes and ways defining complex objects
+  \item Implemented REST and SPARQL (does not work now) endpoints for actual data
+  \item Had a live updates services from OSM changesets.
+  \end{itemize}
+
+
+    GeolLink KG\footnote{Michelle Cheatham, Adila Krisnadhi, Reihaneh Amini, Pascal Hitzler, \emph{et al} (2018) The GeoLink knowledge graph, Big Earth Data, 2:2, 131-143, \doi{10.1080/20964471.2018.1469291}}
+  \begin{itemize}
+  \item Includes diverse information as port calls made by oceanographic cruises, physical sample metadata, research project funding and staffing, and authorship of technical reports
+  \item Implements LOD (4 of 5 stars) and federated SPARQL integration
+  \item Contains 45 millions RDF triples with ontologies and geo-visualization tools
+  \item Describes interlinked \textbf{R2R}, expeditions, \textbf{BCO-DMO}, oceanography, \textbf{IODP}, ocean floor microbiome, \textbf{MBLWHOI}, marine life papers, \textbf{SESAR}, rock samples, \textbf{DataONE}, metadata of external research,  \textbf{AGU-NSF}, projects \& conferences, \textbf{NGDB}, sediment geochemy, \textbf{USAP}, Antarctica ice.
+  \end{itemize}
+  In the project, an update procedure (harvesting) is implemented to ensure the consistence of the KG w.r.t. the geo-base ontology (GBO).
+
+
+   The project\footnote{Tarek Abid, Hafed Zarzour. Integrating Linked Open Data in Geographical
+Information System. International Conference on Information Technology for Organization Development. 2014. } deals with developing a web GIS automatically publishing DBPedia data.
+  \begin{itemize}
+  \item LOD resembles Open Government Data principles
+  \item Modules are
+    \begin{itemize}
+    \item GIS is Google Map API v3
+    \item SPARQL used to query DBPedia
+    \item Viewing DBPedia data with Data Table plug-in of JQuery
+    \end{itemize}
+  \item Test application allows user querying celebrities by their home town/city pointed by mouse on the Google Map.
+  \end{itemize}
+
+   The project\footnote{Adam Iwaniak, Marta Leszczuk, Marek Strzelecki, Francis Harvey, Iwona Kaczmarek. A Novel Approach for Publishing Linked Open Geodata from National Registries with the Use of Semantically Annotated Context Dependent Web Pages. International Journal of Geo-Information. 6, 252, 2017. \doi{10.3390/ijgi6080252}} goal is to convert existing GIS data into explicit knowledge, thus, forming a Spatial Data Infrastructure (SDI).
+  \begin{itemize}
+  \item Integrate existing geoportal data into a KB, including dynamic data
+  \item Geoportal data must be LOD, \emph{e.g.}, HTML is enriched with RDFa
+  \item Relation interpreters implemented as Expert systems (``building near forest'')
+  \item Semantic enrichment of raw data to make it more usable/discoverable
+  \item Targeting to GeoSPARQL (sfIntersects, sfOverlaps, sfTouches, sfWithin, sfContains))
+  \item Metadata inference from the data source properties
+  \item Test application is to integrate public services data in Mazowieckie Voivodeship of Poland, queries are realized by a limited set of keywords
+  \end{itemize}
+
+  Speak about improving KG with spatial processing and expert systems.
+
+  Another interesting project is ... viewing the celebrities data querying SPARQL endpoint of DBPedia.org.
+
 \section{Future activity plan}
 
-\section{Conclusion}
+Improve the structure of the fault KG
+Extend structure with textual, documental attributes and widgets showing their content.
+Implement more on-demand interface elemetnts filling in. and Ability to chose @similar@ objects.
+Implement editing of the KG and spatial data, \emph{i.e.}, adopt the corresponding leaflet functionality.
+
+ Bidirectional versioned data transfer between user GIS (QGIS, OSM Mapnik, Leaflet) and the SW storage
+
+Attach existing World fault data resources to the viewer
+
+   Implement various analytical functionality for domain problem solving
+
+   Natural language interface
 
 
-CEUR-WS's article template provides a consistent \LaTeX{} style for
-use across CEUR-WS publications, and incorporates accessibility and
-metadata-extraction functionality. This document will explain the
-major features of the document class % \footnote{You can use this
-%  document as the template for preparing your publication. We
-%  recommend using the latest version of the ceurart style.
-%}.
-
-If you are new to publishing with CEUR-WS, this document is a valuable
-guide to the process of preparing your work for publication.
-
-The ``\verb|ceurart|'' document class can be used to prepare articles
-for any CEUR-WS publication, and for any stage of publication, from
-review to final ``camera-ready'' copy with {\itshape very} few changes
-to the source.
-
-This class depends on the following packages
-for its proper functioning:
-
-\begin{itemize}
-\item \verb|natbib.sty| for citation processing;
-\item \verb|geometry.sty| for margin settings;
-\item \verb|graphicx.sty| for graphics inclusion;
-\item \verb|hyperref.sty| optional package if hyperlinking is required in
-  the document;
-\item \verb|fontawesome5.sty| optional package for bells and whistles.
-\end{itemize}
-
-All the above packages are part of any
-standard \LaTeX{} installation.
-Therefore, the users need not be
-bothered about downloading any extra packages.
-
-\section{Modifications}
-
-Modifying the template --- including but not limited to: adjusting
-margins, typeface sizes, line spacing, paragraph and list definitions,
-and the use of the \verb|\vspace| command to manually adjust the
-vertical spacing between elements of your work --- is not allowed.
-
-\section{Template parameters}
-
-There are a number of template
-parameters which modify some part of the \verb|ceurart| document class.
-This parameters are enclosed in square
-brackets and are a part of the {\verb|documentclass|} command:
-\begin{minted}{latex}
-  \documentclass[parameter]{ceurart}
-\end{minted}
-
-Frequently-used parameters, or combinations of parameters, include:
-\begin{itemize}
-\item {\verb|twocolumn|}: Two column layout.
-\item {\verb|hf|}: Enable header and footer\footnote{You can enable
-    the display of page numbers in the final version of the entire
-    collection. In this case, you should adhere to the end-to-end
-    pagination of individual papers.}.
-\end{itemize}
-
-\section{Front matter}
-
-\subsection{Title Information}
-
-The titles of papers should be either all use the emphasizing
-capitalized style or they should all use the regular English (or
-native language) style. It does not make a good impression if you or
-your authors mix the styles.
-
-Use the \verb|\title| command to define the title of your work. Do not
-insert line breaks in your title.
-
-\subsection{Title variants}
-
-\verb|\title| command have the below options:
-\begin{itemize}
-\item \verb|title|: Document title. This is default option.
-\begin{minted}{latex}
-\title[mode=title]{This is a title}
-\end{minted}
-You can just omit it, like as follows:
-\begin{minted}{latex}
-\title{This is a title}
-\end{minted}
-
-\item \verb|alt|: Alternate title.
-\begin{minted}{latex}
-\title[mode=alt]{This is a alternate title}
-\end{minted}
-
-\item \verb|sub|: Sub title.
-\begin{minted}{latex}
-\title[mode=sub]{This is a sub title}
-\end{minted}
-
-\item \verb|trans|: Translated title.
-\begin{minted}{latex}
-\title[mode=trans]{This is a translated title}
-\end{minted}
-
-\item \verb|transsub|: Translated sub title.
-\begin{minted}{latex}
-\title[mode=transsub]{This is a translated sub title}
-\end{minted}
-\end{itemize}
-
-\subsection{Authors and Affiliations}
-
-Each author must be defined separately for accurate metadata
-identification. Multiple authors may share one affiliation. Authors'
-names should not be abbreviated; use full first names wherever
-possible. Include authors' e-mail addresses whenever possible.
-
-\verb|\author| command have the below options:
-
-\begin{itemize}
-\item \verb|style|: Style of author name (chinese)
-\item \verb|prefix|: Prefix
-\item \verb|suffix|: Suffix
-\item \verb|degree|: Degree
-\item \verb|role|: Role
-\item \verb|orcid|: ORCID
-\item \verb|email|: E-mail
-\item \verb|url|: URL
-\end{itemize}
-
-Author names can have some kinds of marks and notes:
-\begin{itemize}
-\item affiliation mark: \verb|\author[<num>]|.
-% \item email: \verb|\ead{<email>}|,
-% \item url: \verb|\ead[url]{<url>}|.
-\end{itemize}
-
-The author names and affiliations could be formatted in two ways:
-\begin{enumerate}
-\item Group the authors per affiliation.
-\item Use an explicit mark to indicate the affiliations.
-\end{enumerate}
-
-Author block example:
-\begin{minted}{latex}
-\author[1,2]{Author Name}[%
-    prefix=Prof.,
-    degree=D.Sc.,
-    role=Researcher,
-    orcid=0000-0000-000-0000,
-    email=name@example.com,
-    url=https://name.example.com
-]
-
-\address[1]{Affiliation #1}
-\address[2]{Affiliation #2}
-\end{minted}
-
-\subsection{Abstract and Keywords}
-
-Abstract shall be entered in an environment that starts
-with \verb|\begin{abstract}| and ends with
-\verb|\end{abstract}|.
-
-\begin{minted}{latex}
-\begin{abstract}
-  This is an abstract.
-\end{abstract}
-\end{minted}
-
-The key words are enclosed in a \verb|{keyword}|
-environment. Use \verb|\sep| to separate keywords.
-
-\begin{minted}{latex}
-\begin{keywords}
-  First keyword \sep
-  Second keyword \sep
-  Third keyword \sep
-  Fourth keyword
-\end{keywords}
-\end{minted}
-
-At the end of front matter add \verb|\maketitle| command.
-
-\section{Sectioning Commands}
-
-Your work should use standard \LaTeX{} sectioning commands:
-\verb|section|, \verb|subsection|, \verb|subsubsection|, and
-\verb|paragraph|. They should be numbered; do not remove the numbering
-from the commands.
-
-Simulating a sectioning command by setting the first word or words of
-a paragraph in boldface or italicized text is not allowed.
-
-\section{Tables}
-
-The ``\verb|ceurart|'' document class includes the ``\verb|booktabs|''
-package --- \url{https://ctan.org/pkg/booktabs} --- for preparing
-high-quality tables.
-
-Table captions are placed \textit{above} the table.
-
-Because tables cannot be split across pages, the best placement for
-them is typically the top of the page nearest their initial cite.  To
-ensure this proper ``floating'' placement of tables, use the
-environment \verb|table| to enclose the table's contents and the
-table caption. The contents of the table itself must go in the
-\verb|tabular| environment, to be aligned properly in rows and
-columns, with the desired horizontal and vertical rules.
-
-Immediately following this sentence is the point at which
-Table~\ref{tab:freq} is included in the input file; compare the
-placement of the table here with the table in the printed output of
-this document.
-
-\begin{table*}
-  \caption{Frequency of Special Characters}
-  \label{tab:freq}
-  \begin{tabular}{ccl}
-    \toprule
-    Non-English or Math&Frequency&Comments\\
-    \midrule
-    \O & 1 in 1,000& For Swedish names\\
-    $\pi$ & 1 in 5& Common in math\\
-    \$ & 4 in 5 & Used in business\\
-    $\Psi^2_1$ & 1 in 40,000& Unexplained usage\\
-  \bottomrule
-\end{tabular}
-\end{table*}
-
-To set a wider table, which takes up the whole width of the page's
-live area, use the environment \verb|table*| to enclose the table's
-contents and the table caption.  As with a single-column table, this
-wide table will ``float'' to a location deemed more
-desirable. Immediately following this sentence is the point at which
-Table~\ref{tab:commands} is included in the input file; again, it is
-instructive to compare the placement of the table here with the table
-in the printed output of this document.
-
-\begin{table}
-  \caption{Some Typical Commands}
-  \label{tab:commands}
-  \begin{tabular}{ccl}
-    \toprule
-    Command &A Number & Comments\\
-    \midrule
-    \texttt{{\char'134}author} & 100& Author \\
-    \texttt{{\char'134}table}& 300 & For tables\\
-    \texttt{{\char'134}table*}& 400& For wider tables\\
-    \bottomrule
-  \end{tabular}
-\end{table}
-
-\section{Math Equations}
-
-You may want to display math equations in three distinct styles:
-inline, numbered or non-numbered display.  Each of the three are
-discussed in the next sections.
-
-\subsection{Inline (In-text) Equations}
-
-A formula that appears in the running text is called an inline or
-in-text formula.  It is produced by the \verb|math| environment,
-which can be invoked with the usual
-\verb|\begin| \ldots \verb|\end| construction or with
-the short form \verb|$| \ldots \verb|$|. You can use any of the symbols
-and structures, from $\alpha$ to $\omega$, available in
-\LaTeX~\cite{Lamport:LaTeX};
-this section will simply show a few
-examples of in-text equations in context. Notice how this equation:
-\begin{math}
-  \lim_{n\rightarrow \infty} \frac{1}{n} = 0,
-\end{math}
-set here in in-line math style, looks slightly different when
-set in display style.  (See next section).
-
-\subsection{Display Equations}
-
-A numbered display equation---one set off by vertical space from the
-text and centered horizontally---is produced by the \verb|equation|
-environment. An unnumbered display equation is produced by the
-\verb|displaymath| environment.
-
-Again, in either environment, you can use any of the symbols and
-structures available in \LaTeX{}; this section will just give a couple
-of examples of display equations in context.  First, consider the
-equation, shown as an inline equation above:
-\begin{equation}
-  \lim_{n\rightarrow \infty} \frac{1}{n} = 0.
-\end{equation}
-Notice how it is formatted somewhat differently in
-the \verb|displaymath|
-environment.  Now, we'll enter an unnumbered equation:
-\begin{displaymath}
-  S_{n} = \sum_{i=1}^{n} x_{i} ,
-\end{displaymath}
-and follow it with another numbered equation:
-\begin{equation}
-  \lim_{x \to 0} (1 + x)^{1/x} = e
-\end{equation}
-just to demonstrate \LaTeX's able handling of numbering.
-
-\section{Figures}
-
-The ``\verb|figure|'' environment should be used for figures. One or
-more images can be placed within a figure. If your figure contains
-third-party material, you must clearly identify it as such, as shown
-in the example below.
+The target infrastructure is shown in Figure~\ref{fig:target}.
 \begin{figure}
   \centering
-  \includegraphics[width=\linewidth]{sample-franklin}
-  \caption{1907 Franklin Model D roadster. Photograph by Harris \&
-    Ewing, Inc. [Public domain], via Wikimedia
-    Commons. (\url{https://goo.gl/VLCRBB}).}
+  \includegraphics[width=0.8\linewidth]{architecture.pdf}
+  \caption{Target architecture of the environment}
+  \label{fig:target}
 \end{figure}
 
-Your figures should contain a caption which describes the figure to
-the reader. Figure captions go below the figure. Your figures should
-also include a description suitable for screen readers, to
-assist the visually-challenged to better understand your work.
 
-Figure captions are placed below the figure.
+\section*{Conclusion}
 
-\section{Citations and Bibliographies}
+Viewer in essence interprets partially SPARQL-quarries as maps.
 
-The use of Bib\TeX{} for the preparation and formatting of one's
-references is strongly recommended. Authors' names should be complete
---- use full first names (``Donald E. Knuth'') not initials
-(``D. E. Knuth'') --- and the salient identifying features of a
-reference should be included: title, year, volume, number, pages,
-article DOI, etc.
-
-The bibliography is included in your source document with these two
-commands, placed just before the \verb|\end{document}| command:
-\begin{minted}{latex}
-\bibliography{bibfile}
-\end{minted}
-where ``\verb|bibfile|'' is the name, without the ``\verb|.bib|''
-suffix, of the Bib\TeX{} file.
-
-
-\subsection{Some examples}
-
-A paginated journal article \cite{Abril07}, an enumerated journal
-article \cite{Cohen07}, a reference to an entire issue
-\cite{JCohen96}, a monograph (whole book) \cite{Kosiur01}, a
-monograph/whole book in a series (see 2a in spec. document)
-\cite{Harel79}, a divisible-book such as an anthology or compilation
-\cite{Editor00} followed by the same example, however we only output
-the series if the volume number is given \cite{Editor00a} (so series
-should not be present since it has no vol. no.), a chapter in a
-divisible book \cite{Spector90}, a chapter in a divisible book in a
-series \cite{Douglass98}, a multi-volume work as book \cite{Knuth97},
-an article in a proceedings (of a conference, symposium, workshop for
-example) (paginated proceedings article) \cite{Andler79}, a
-proceedings article with all possible elements \cite{Smith10}, an
-example of an enumerated proceedings article \cite{VanGundy07}, an
-informally published work \cite{Harel78}, a doctoral dissertation
-\cite{Clarkson85}, a master's thesis: \cite{anisi03}, an online
-document / world wide web resource \cite{Thornburg01, Ablamowicz07,
-  Poker06}, a video game (Case 1) \cite{Obama08} and (Case 2)
-\cite{Novak03} and \cite{Lee05} and (Case 3) a patent
-\cite{JoeScientist001}, work accepted for publication \cite{rous08},
-prolific author \cite{SaeediMEJ10} and \cite{SaeediJETC10}. Other
-cites might contain `duplicate' DOI and URLs (some SIAM articles)
-\cite{Kirschmer:2010:AEI:1958016.1958018}. Multi-volume works as books
-\cite{MR781536} and \cite{MR781537}. A couple of citations with DOIs:
-\cite{2004:ITE:1009386.1010128,Kirschmer:2010:AEI:1958016.1958018}. Online
-citations: \cite{TUGInstmem, Thornburg01, R, UMassCitations}.
-
-\section{Acknowledgments}
-
-Identification of funding sources and other support, and thanks to
-individuals and groups that assisted in the research and the
-preparation of the work should be included in an acknowledgment
-section, which is placed just before the reference section in your
-document.
-
-This section has a special environment:
-\begin{minted}{latex}
 \begin{acknowledgments}
-  These are different acknowledgments.
-\end{acknowledgments}
-\end{minted}
-so that the information contained therein can be more easily collected
-during the article metadata extraction phase, and to ensure
-consistency in the spelling of the section heading.
 
-Authors should not prepare this section as a numbered or unnumbered
-{\verb|\section|}; please use the ``{\verb|acknowledgments|}'' environment.
-
-\section{Appendices}
-
-If your work needs an appendix, add it before the
-``\verb|\end{document}|'' command at the conclusion of your source
-document.
-
-Start the appendix with the ``\verb|appendix|'' command:
-\begin{minted}{latex}
-\appendix
-\end{minted}
-and note that in the appendix, sections are lettered, not
-numbered.
-
-%%
-%% The acknowledgments section is defined using the "acknowledgments" environment
-%% (and NOT an unnumbered section). This ensures the proper
-%% identification of the section in the article metadata, and the
-%% consistent spelling of the heading.
-\begin{acknowledgments}
-  Thanks to the developers of ACM consolidated LaTeX styles
-  \url{https://github.com/borisveytsman/acmart} and to the developers
-  of Elsevier updated \LaTeX{} templates
-  \url{https://www.ctan.org/tex-archive/macros/latex/contrib/els-cas-templates}.
 \end{acknowledgments}
 
 %%
@@ -552,11 +366,20 @@ Information System. International Conference on Information Technology for Organ
 \bibitem{geolink} Michelle Cheatham, Adila Krisnadhi, Reihaneh Amini, Pascal Hitzler, \emph{et al} (2018) The GeoLink knowledge graph, Big Earth Data, 2:2, 131-143, \doi{10.1080/20964471.2018.1469291}
 
 \bibitem{lunina} Oksana V. Lunina.  The digital map of the pliocene quaternary crustal faults in the southern east siberia and the adjacent northern Mongolia. Geodynamics \& Tectonophysics. 2016. 7(3):407-434. \doi{10.5800/GT-2016-7-3-0215}
-\bibitem{afs} Server activefaults.ru
+\bibitem{afs} Cartographic service Activetectonics. \url{http://activetectonics.ru/} (access date: 20-Sep-2021)
 \bibitem{foss} Mathias Leidig, Richard Teeuw. Free software: A review, in the context of disaster management. 2015. International Journal of Applied Earth Observation and Geoinformation,
 Vol.~42, pp.~49-56, ISSN 0303-2434, \doi{10.1016/j.jag.2015.05.012}.
-\end{thebibliography}
 
+\bibitem{graphdb} 1
+\bibitem{protege} 2
+\bibitem{python} 3
+\bibitem{cliopatria} 3
+\bibitem{cherkashin19} d
+
+\bibitem{zont19}  Cherkashin E, Shigarov A and Paramonov V 2019 Representation of MDA transformation with logical objects \emph{International Multi-Conference on Engineering, Computer and Information Sciences (SIBIRCON), Novosibirsk, Russia} 0913--8 \doi{10.1109/SIBIRCON48586.2019.8958008}
+
+
+\end{thebibliography}
 
 %%
 %% If your work has an appendix, this is the place to put it.
@@ -564,15 +387,8 @@ Vol.~42, pp.~49-56, ISSN 0303-2434, \doi{10.1016/j.jag.2015.05.012}.
 
 \section{Online Resources}
 
-
-The sources for the ceur-art style are available via
-\begin{itemize}
-\item \href{https://github.com/yamadharma/ceurart}{GitHub},
-% \item \href{https://www.overleaf.com/project/5e76702c4acae70001d3bc87}{Overleaf},
-\item
-  \href{https://www.overleaf.com/latex/templates/template-for-submissions-to-ceur-workshop-proceedings-ceur-ws-dot-org/pkfscdkgkhcq}{Overleaf
-    template}.
-\end{itemize}
+The sources for the viewer are being developed at
+\href{https://github.com/De17eon/GRL}{GitHub}.
 
 \end{document}
 
